tests/paczka1/small_fuzzy/49186191.err
Error in line 3: 3em4uAS A893 35,3
Error in line 6: 3em4uAS A121 57,6
Error in line 12: A121 A893 91,9
Error in line 11: AwAQo9gl S28 37,7
